# pk-pi-hermes-evolve

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
benchmarks/sokoban/: sokoban-results-template.csv  sokoban-skill-benchmark-pack.md
python_backend/: README.md  pyproject.toml  run_backend.py
python_backend/pk_pi_hermes_evolve/: __init__.py  backend.py
scripts/: ralph_otel.py  sokoban_benchmark.py
scripts/tasks/: hermes_parity_task.json
src/: engine.ts  index.ts  python-backend.ts  session-history.ts  types.ts
